--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   box-shadow: 0px 2px 5px;
 }
 
-section {
+body {
   padding-top: 5rem;
 }
 
@@ -50,8 +50,8 @@ footer {
 }
 
 .about-social-icon {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin: 10px;
   border-radius: 20%;
 }
